[package]
name = "bank-data"
version = "0.1.0"
authors = ["A248 <theanandbeh@gmail.com>"]
edition = "2021"
description = "Downloads and merges data from the central bank website"
license = "GPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
stable-eyre = "0.2.2"
log = "0.4.19"
simplelog = "0.12.1"
async-std = "1.12.0"
chrono = "0.4.26"
futures = "0.3.28"
futures-io = "0.3.28"
hyper = { version = "1.0.0-rc.4", default-features = false, features = ["http1", "client"] }
http-body-util = "0.1.0-rc.3"
async-tls = { version = "0.12.0", default-features = false, features = ["client"] }
async-trait = "0.1.72"
dashmap = "5.5.0"
smallvec = "1.11.0"
arc-interner = "0.7.0"
calamine = "0.21.2"
regex = "1.9.1"
assert_matches = "1.5.0"
csv-async = {  version = "1.2.6", default-features = false }

[profile.release]
debug = true
overflow-checks = true
